--- a/views/post-detail.ejs
+++ b/views/post-detail.ejs
@@ -13,8 +13,8 @@
           
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-default" type="submit">AllPosts</button>
-              <button class="btn btn-outline-success" type="submit">CreatePost</button>
+              <a href="/index" class="btn btn-outline-default" type="submit">AllPosts</a>
+              <a href="/form" class="btn btn-outline-success" type="submit">CreatePost</a href="/form">
             </form>
           </div>
         </div>
