--- a/views/post-detail.ejs
+++ b/views/post-detail.ejs
@@ -14,7 +14,7 @@
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <a href="/index" class="btn btn-outline-default" type="submit">AllPosts</a>
-              <a href="/form" class="btn btn-outline-success" type="submit">CreatePost</a href="/form">
+              <a href="/form" class="btn btn-outline-success" type="submit">CreatePost</a>
             </form>
           </div>
         </div>
@@ -27,7 +27,29 @@
         <h4><%= detail.date %></h4>
         <a href="mailto:<%=detail.author.email%>"><%= detail.author.name %></a>  
 </div>
+
+
+
+
+<div class="container">
+  <button id="viewcomments" class="btn btn-success" data-postid="<%= detail._id %>">View Coments</button>
+  <h4>Comment</h4>
+  <form action="/post-detail/comment/<%= detail._id %>" method="post">
+
+    <div class="mb-3">
+      <label for="comment" class="form-label">Comment</label>
+      <input type="text" class="form-control" name="comment" id="comment" placeholder="comment">
+    </div>
+    <div class="mb-3">
+      <label for="desc" class="form-label">Description</label>
+      <textarea type="text" class="form-control" id="desc" name="desc" placeholder="Description"></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
+<script src="/scripts/comments.js" defer></script>
 </body>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   
   <style>
